--- a/Lectures/Week01_IntroToNHST_Lecture.html
+++ b/Lectures/Week01_IntroToNHST_Lecture.html
@@ -55,7 +55,7 @@ class: center, middle, inverse, title-slide
 
 ## Research process
 
-&lt;img src="images/ResearchProcess.png" width="2411" /&gt;
+![](images/ResearchProcess.png)&lt;!-- --&gt;
 
 ---
 exclude: true
@@ -556,7 +556,7 @@ count: false
      + `\(34.5 - 26.5 = 8\)`
      
 
-&lt;img src="images/TukeysHinges.png" width="1152" /&gt;
+![](images/TukeysHinges.png)&lt;!-- --&gt;
 
 
 ]
@@ -927,127 +927,6 @@ class: center, inverse, middle
 &gt; **Test Your Understanding:** Which value of x is most common, according to the probability distribution seen here? Which values are less common?
 
 ---
-## The normal distribution
-
-+ A probability distribution where values around the mean are most common, and values further from the mean are increasingly less common.
-
-+ AKA the bell curve, a Gaussian distribution
-
---
-
-&gt; **Test Your Understanding:** What kinds of variables can you think of that might follow a normal distribution? 
-
----
-## The normal distribution
-.pull-left[
-**Characteristics of a normal distribution**
-
-+ Unimodal
-
-+ Centered around mean
-
-]
-.pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-32-1.svg)&lt;!-- --&gt;
-]
-
----
-## The normal distribution
-.pull-left[
-**Characteristics of a normal distribution**
-
-+ Unimodal
-
-+ Centered around mean
-
-  + **68%** of scores fall within **1 SD** of the mean
-
-]
-.pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-33-1.svg)&lt;!-- --&gt;
-]
-
----
-## The normal distribution
-.pull-left[
-**Characteristics of a normal distribution**
-
-+ Unimodal
-
-+ Centered around mean
-
-  + 68% of scores fall within 1 SD of the mean
-  + **95%** of scores fall within **~2 SD** of the mean (exactly 1.96 SD of the mean)
-
-]
-.pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-34-1.svg)&lt;!-- --&gt;
-]
-
----
-## The normal distribution
-.pull-left[
-**Characteristics of a normal distribution**
-
-+ Unimodal
-
-+ Centered around mean
-
-  + 68% of scores fall within 1 SD of the mean
-  + 95% of scores fall within ~2 SD of the mean (exactly 1.96 SD of the mean)
-  + **99.75%** of scores fall within **3 SD** of the mean
-
-]
-.pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-35-1.svg)&lt;!-- --&gt;
-]
-
----
-## The normal distribution
-
-&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
-
-.center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-36-1.svg)&lt;!-- --&gt;
-]
-
----
-## The normal distribution
-
-&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
-
-.center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-37-1.svg)&lt;!-- --&gt;
-]
-
----
-## The normal distribution
-
-&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
-
-.center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-38-1.svg)&lt;!-- --&gt;
-]
-
----
-
-## The normal distribution
-
-&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
-
-.center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-39-1.svg)&lt;!-- --&gt;
-]
-
----
-## The normal distribution
-
-&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
-
-.center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-40-1.svg)&lt;!-- --&gt;
-]
----
 ## Describing your data: Probability distributions
 
 .pull-left[
@@ -1061,7 +940,7 @@ class: center, inverse, middle
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-41-1.svg)&lt;!-- --&gt;
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-32-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1081,7 +960,7 @@ class: center, inverse, middle
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-42-1.svg)&lt;!-- --&gt;
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-33-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -1107,7 +986,7 @@ count: false
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-43-1.svg)&lt;!-- --&gt;
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-34-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1123,80 +1002,235 @@ count: false
 
 + If the value is unusual enough (i.e., if it is highly unlikely we would see the value if the null is true), we reject `\(H_0\)`
 
+
 ---
-class: center, inverse, middle
+class: inverse, center, middle
 
 ## Questions?
 
 ---
-## Null Distribution
+## The normal distribution
 
-+ All parametric quantitative tests we learn about in this course evaluate significance by evaluating results against a predefined **null distribution**
++ A probability distribution where values around the mean are most common, and values further from the mean are increasingly less common.
 
-+ The null distribution is the probability distribution of a statistic **given that `\(H_0\)` is true**. 
++ AKA the bell curve, a Gaussian distribution
 
-+ The shape of the null distribution depends on the test statistic (and the degrees of freedom, which we'll get to at a later point in the course)
+--
+
+&gt; **Test Your Understanding:** What kinds of variables can you think of that might follow a normal distribution? 
+
+---
+## The normal distribution
+.pull-left[
+**Characteristics of a normal distribution**
+
++ Unimodal
+
++ Its key parameters are mean and standard deviation
+
+]
+.pull-right[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-35-1.svg)&lt;!-- --&gt;
+]
+
+---
+## The normal distribution
+.pull-left[
+**Characteristics of a normal distribution**
+
++ Unimodal
+
++ Its key parameters are mean and standard deviation
+  
+
+]
+.pull-right[
+
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-36-1.svg)&lt;!-- --&gt;
+
+Adjusting the mean changes where the curve is centered on the `\(x\)`-axis
+
+]
+
+---
+## The normal distribution
+.pull-left[
+**Characteristics of a normal distribution**
+
++ Unimodal
+
++ Its key parameters are mean and standard deviation
+  
+
+]
+.pull-right[
+
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-37-1.svg)&lt;!-- --&gt;
+
+Adjusting the `\(SD\)` changes the shape of the curve
+
+]
+
+---
+## The normal distribution
+.pull-left[
+**Characteristics of a normal distribution**
+
++ Unimodal
+
++ Its key parameters are mean and standard deviation
+
+  + **68%** of scores fall within **1 SD** of the mean
+
+]
+.pull-right[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-38-1.svg)&lt;!-- --&gt;
+]
+
+---
+## The normal distribution
+.pull-left[
+**Characteristics of a normal distribution**
+
++ Unimodal
+
++ Its key parameters are mean and standard deviation
+
+  + 68% of scores fall within 1 SD of the mean
+  + **95%** of scores fall within **~2 SD** of the mean (exactly 1.96 SD of the mean)
+
+]
+.pull-right[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-39-1.svg)&lt;!-- --&gt;
+]
+
+---
+## The normal distribution
+.pull-left[
+**Characteristics of a normal distribution**
+
++ Unimodal
+
++ Its key parameters are mean and standard deviation
+
+  + 68% of scores fall within 1 SD of the mean
+  + 95% of scores fall within ~2 SD of the mean (exactly 1.96 SD of the mean)
+  + **99.75%** of scores fall within **3 SD** of the mean
+
+]
+.pull-right[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-40-1.svg)&lt;!-- --&gt;
+]
+
+---
+## The normal distribution
+
+&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
+
+.center[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-41-1.svg)&lt;!-- --&gt;
+]
+
+---
+## The normal distribution
+
+&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
+
+.center[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-42-1.svg)&lt;!-- --&gt;
+]
+
+---
+## The normal distribution
+
+&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
+
+.center[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-43-1.svg)&lt;!-- --&gt;
+]
+
+---
+
+## The normal distribution
+
+&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
+
+.center[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-44-1.svg)&lt;!-- --&gt;
+]
+
+---
+## The normal distribution
+
+&gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
+
+.center[
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-45-1.svg)&lt;!-- --&gt;
+]
 
 
 ---
-## Comparing Data against null distribution: NHST
+## Assessing Normality in Data
 
-.pull-left[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-44-1.svg)&lt;!-- --&gt;
++ Many of the parametric statistical tests we'll be using are most reliable when data are normally distributed
 
-]
+&gt; **Test Your Understanding:** In a perfectly normal distribution, how are the mean, median, and mode distributed?
 
 
 ---
 count: false
 
-## Comparing Data against null distribution: NHST
+## Assessing Normality in Data
+
++ Many of the parametric statistical tests we'll be using are most reliable when data are normally distributed
+
++ Not all data are normally distributed
+    + **Skewness**
 
 .pull-left[
-
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-45-1.svg)&lt;!-- --&gt;
-
+.center[**Negatively Skewed**]
+![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-46-1.svg)&lt;!-- --&gt;
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-46-1.svg)&lt;!-- --&gt;
-
-]
-
-&gt; **Test Your Understanding:** Which score is less common?
-
----
-count: false
-
-## Comparing Data against null distribution: NHST
-
-.pull-left[
+.center[**Positively Skewed**]
 ![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-47-1.svg)&lt;!-- --&gt;
 ]
 
-.pull-right[
+---
+## Assessing Normality in Data
+
++ Many of the parametric statistical tests we'll be using are most reliable when data are normally distributed
+
++ Not all data are normally distributed
+    + **Skewness**
+    + **Kurtosis**
+
+.pull-left[
+.center[**Platykurtic**]
 ![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-48-1.svg)&lt;!-- --&gt;
 ]
 
-&gt; **Test Your Understanding:** Which score is less common?
-
-
----
-
-## Null Distributions
-
-.pull-left[
+.pull-right[
+.center[**Leptokurtic**]
 ![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-49-1.svg)&lt;!-- --&gt;
 ]
 
+---
+## Assessing Normality in Data
 
-.pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-50-1.svg)&lt;!-- --&gt;
-]
++ Can visually assess histograms
 
-.center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-51-1.svg)&lt;!-- --&gt;
-]
++ Can also assess using statistical tests:
+
+  + For samples &lt; 50, could use the *Shapiro-Wilk Test*
+
+  + For samples &gt; 50, could use the *Kolmogorov–Smirnov Test*
+
+  + Significant results on these tests indicate that normality has been violated
+
++ Can also check the skewness and kurtosis values
+  + Values further from 0 indicate greater levels of skewness or kurtosis
 
 ---
 class: center, inverse, middle
