wk 1 lecture & lab

--- a/Lectures/Week01_IntroToNHST_Lecture.html
+++ b/Lectures/Week01_IntroToNHST_Lecture.html
@@ -55,7 +55,7 @@ class: center, middle, inverse, title-slide
 
 ## Research process
 
-![](images/ResearchProcess.png)&lt;!-- --&gt;
+&lt;img src="images/ResearchProcess.png" width="2411" /&gt;
 
 ---
 exclude: true
@@ -243,7 +243,7 @@ count: false
 
 `\(x = \{10, 2, 5, 3, 2, 0, 12\}\)`
 
-`\(0, 2, 2, \color{#D95829}{3}, 5, 10, 12\)`
+`\(0, 2, 2, \color{#4CA384}{3}, 5, 10, 12\)`
 
 **Median `\(x\)` = 3**
 
@@ -258,7 +258,7 @@ count: false
 `\(y = \{3, 7, 1, 20, 14, 25\}\)`
 
 
-`\(1, 3, \color{#D95829}{7, 14,} 20, 25\)`
+`\(1, 3, \color{#4CA384}{7, 14,} 20, 25\)`
 
 
 `\(\frac{7+14}{2} = 10.5\)`
@@ -290,7 +290,7 @@ count: false
 
 .pull-right.center[
 
-`\(x = \{10, \color{#D95829}{2}, 5, 3, \color{#D95829}{2}, 0, 12\}\)`
+`\(x = \{10, \color{#4CA384}{2}, 5, 3, \color{#4CA384}{2}, 0, 12\}\)`
 
 &lt;img src="images/SPSSmode.PNG" width="85%" /&gt;
 
@@ -556,7 +556,7 @@ count: false
      + `\(34.5 - 26.5 = 8\)`
      
 
-![](images/TukeysHinges.png)&lt;!-- --&gt;
+&lt;img src="images/TukeysHinges.png" width="1152" /&gt;
 
 
 ]
@@ -587,7 +587,7 @@ count: false
 
 .pull-left[
 
-`$$s^2 = \frac{\sum(\color{#D95829}{x_i}-\bar{x})^2}{n-1}$$`
+`$$s^2 = \frac{\sum(\color{#4CA384}{x_i}-\bar{x})^2}{n-1}$$`
 
 + `\(x_i\)` = individual observations of x
 ]
@@ -601,7 +601,7 @@ count: false
 ## Variation in Scores - Variance
 
 .pull-left[
-`$$s^2 = \frac{\sum(x_i-\color{#D95829}{\bar{x}})^2}{n-1}$$`
+`$$s^2 = \frac{\sum(x_i-\color{#4CA384}{\bar{x}})^2}{n-1}$$`
 
 
 + `\(x_i\)` = individual observations of x
@@ -619,7 +619,7 @@ count: false
 ## Variation in Scores - Variance
 
 .pull-left[
-`$$s^2 = \frac{\sum(\color{#D95829}{x_i-\bar{x}})^2}{n-1}$$`
+`$$s^2 = \frac{\sum(\color{#4CA384}{x_i-\bar{x}})^2}{n-1}$$`
 
 
 + `\(x_i\)` = individual observations of x
@@ -637,7 +637,7 @@ count: false
 ## Variation in Scores - Variance
 
 .pull-left[
-`$$s^2 = \frac{\sum(x_i-\bar{x})\color{#D95829}{^2}}{n-1}$$`
+`$$s^2 = \frac{\sum(x_i-\bar{x})\color{#4CA384}{^2}}{n-1}$$`
 
 
 + `\(x_i\)` = individual observations of x
