More website stuff

--- a/Lectures/Week01_ExploringData_Lecture.html
+++ b/Lectures/Week01_ExploringData_Lecture.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title> Intro to Null-Hypothesis Statistical Testing </title>
+    <title> Exploring Your Data </title>
     <meta charset="utf-8" />
     <meta name="author" content="Monica Truelove-Hill" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -12,7 +12,7 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# <b> Intro to Null-Hypothesis Statistical Testing </b>
+# <b> Exploring Your Data </b>
 ]
 .subtitle[
 ## Psychological Research Methods:<br>Data Management &amp; Analysis<br><br>
@@ -96,12 +96,12 @@ exclude: true
 
 .pull-left[
 .center[**Categorical Data: Bar Plots**]
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-3-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-3-1.svg)&lt;!-- --&gt;
 ]
 
 .pull-right[
 .center[**Continuous Data: Histograms**]
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-4-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-4-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -282,7 +282,7 @@ count: false
 
 + Data may be bimodal or multimodal
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-6-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-6-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -302,15 +302,15 @@ count: false
 ####  How useful are the measures of central tendency in each of the following situations?
 
 .pull-left.center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-8-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-8-1.svg)&lt;!-- --&gt;
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-9-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-9-1.svg)&lt;!-- --&gt;
 ]
 
 .pull-right.center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-10-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-10-1.svg)&lt;!-- --&gt;
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-11-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-11-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -378,7 +378,7 @@ count: false
 
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-12-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-12-1.svg)&lt;!-- --&gt;
 ]
 
 
@@ -403,7 +403,7 @@ count: false
 
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-13-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-13-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -427,7 +427,7 @@ count: false
 
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-14-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-14-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -447,7 +447,7 @@ count: false
 .pull-right[
 
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-15-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-15-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -465,7 +465,7 @@ count: false
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-16-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-16-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -488,7 +488,7 @@ count: false
 .pull-right[
 
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-17-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-17-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -513,7 +513,7 @@ count: false
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-18-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-18-1.svg)&lt;!-- --&gt;
 
 
 ]   
@@ -540,7 +540,7 @@ count: false
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-19-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-19-1.svg)&lt;!-- --&gt;
 
 
 ]   
@@ -563,7 +563,7 @@ count: false
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-21-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-21-1.svg)&lt;!-- --&gt;
 
 
 ]   
@@ -577,7 +577,7 @@ count: false
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-22-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-22-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -593,7 +593,7 @@ count: false
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-23-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-23-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -611,7 +611,7 @@ count: false
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-24-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-24-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -629,7 +629,7 @@ count: false
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-25-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-25-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -649,7 +649,7 @@ count: false
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-26-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-26-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -671,7 +671,7 @@ count: false
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-27-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-27-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -733,11 +733,11 @@ As the sample grows larger, the variance estimated using n or n-1 grows more sim
 
 .pull-right.center[
 **Mean = 10, SD = 1**
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-28-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-28-1.svg)&lt;!-- --&gt;
 
 **Mean = 10, SD = 10**
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-29-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-29-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -917,7 +917,7 @@ class: center, inverse, middle
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-31-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-31-1.svg)&lt;!-- --&gt;
 
 
 ]
@@ -940,7 +940,7 @@ class: center, inverse, middle
 ]
 
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-32-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-32-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -960,7 +960,7 @@ class: center, inverse, middle
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-33-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-33-1.svg)&lt;!-- --&gt;
 
 ]
 
@@ -986,7 +986,7 @@ count: false
 
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-34-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-34-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1030,7 +1030,7 @@ class: inverse, center, middle
 
 ]
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-35-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-35-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1046,7 +1046,7 @@ class: inverse, center, middle
 ]
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-36-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-36-1.svg)&lt;!-- --&gt;
 
 Adjusting the mean changes where the curve is centered on the `\(x\)`-axis
 
@@ -1065,7 +1065,7 @@ Adjusting the mean changes where the curve is centered on the `\(x\)`-axis
 ]
 .pull-right[
 
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-37-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-37-1.svg)&lt;!-- --&gt;
 
 Adjusting the `\(SD\)` changes the shape of the curve
 
@@ -1084,7 +1084,7 @@ Adjusting the `\(SD\)` changes the shape of the curve
 
 ]
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-38-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-38-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1101,7 +1101,7 @@ Adjusting the `\(SD\)` changes the shape of the curve
 
 ]
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-39-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-39-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1119,7 +1119,7 @@ Adjusting the `\(SD\)` changes the shape of the curve
 
 ]
 .pull-right[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-40-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-40-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1128,7 +1128,7 @@ Adjusting the `\(SD\)` changes the shape of the curve
 &gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
 
 .center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-41-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-41-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1137,7 +1137,7 @@ Adjusting the `\(SD\)` changes the shape of the curve
 &gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
 
 .center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-42-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-42-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1146,7 +1146,7 @@ Adjusting the `\(SD\)` changes the shape of the curve
 &gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
 
 .center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-43-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-43-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1156,7 +1156,7 @@ Adjusting the `\(SD\)` changes the shape of the curve
 &gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
 
 .center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-44-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-44-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1165,7 +1165,7 @@ Adjusting the `\(SD\)` changes the shape of the curve
 &gt; **Test your understanding:** You have given participants the WAIS-IV, which is an IQ test that has been normalised so that the mean is 100 and the SD is 15. Scores are normally distributed. What value do we expect at each point on this normal distribution?
 
 .center[
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-45-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-45-1.svg)&lt;!-- --&gt;
 ]
 
 
@@ -1189,12 +1189,12 @@ count: false
 
 .pull-left[
 .center[**Negatively Skewed**]
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-46-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-46-1.svg)&lt;!-- --&gt;
 ]
 
 .pull-right[
 .center[**Positively Skewed**]
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-47-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-47-1.svg)&lt;!-- --&gt;
 ]
 
 ---
@@ -1208,12 +1208,12 @@ count: false
 
 .pull-left[
 .center[**Platykurtic**]
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-48-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-48-1.svg)&lt;!-- --&gt;
 ]
 
 .pull-right[
 .center[**Leptokurtic**]
-![](Week01_IntroToNHST_Lecture_files/figure-html/unnamed-chunk-49-1.svg)&lt;!-- --&gt;
+![](Week01_ExploringData_Lecture_files/figure-html/unnamed-chunk-49-1.svg)&lt;!-- --&gt;
 ]
 
 ---
