--- a/Labs/Week03_IntrotoNHST_Lab.html
+++ b/Labs/Week03_IntrotoNHST_Lab.html
@@ -112,33 +112,46 @@ if (window.hljs) {
 
 <div id="section-intro-to-todays-lab" class="section level2">
 <h2>Intro to Today’s Lab</h2>
+<p>During today’s lab, you’ll apply the concepts discussed during this
+week’s lecture. Each lab consists of 10 tasks, with corresponding
+questions you can answer. Please note that the questions are not
+required and not marked, although they do provide a helpful source of
+formative feedback that will help you gauge your understanding.</p>
 <p>Intro Goes Here</p>
 <div id="section-learning-objectives" class="section level3">
 <h3>Learning Objectives</h3>
 <p>At the end of this lab, you will be able to:</p>
 <ol style="list-style-type: decimal">
-<li></li>
+<li>Understand the link between probability and inferential
+statistics</li>
+<li>Describe the difference between effect sizes and p-values</li>
+<li>Compute confidence intervals</li>
+<li>Run a power analysis</li>
 </ol>
 </div>
 </div>
 <div id="section-task-1" class="section level2">
 <h2>Task 1:</h2>
 <p>Task 1 Here</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
 <p>Hint Goes Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
 <p>Solution Goes Here</p>
 </details>
+<div>
 <p></br></p>
 </div>
 <div id="section-task-2-calculate-the-area-under-the-curve"
@@ -309,8 +322,8 @@ solution </span>
 </details>
 <p></br></p>
 </div>
-<div id="section-task-10" class="section level2">
-<h2>Task 10:</h2>
+<div id="section-interpret-report" class="section level2">
+<h2>Interpret &amp; Report</h2>
 <p>Task here.</p>
 <details>
 <summary>
