--- a/Labs/Week03_IntrotoNHST_Lab.html
+++ b/Labs/Week03_IntrotoNHST_Lab.html
@@ -209,6 +209,7 @@ questions:</p>
 <script>if (Tutorial.triggerMathJax) Tutorial.triggerMathJax()</script>
 </div>
 </div>
+<div class="container">
 <details>
 <summary>
 <span style="font-weight: bold; font-size: 16pt"> Click here for a hint
@@ -216,174 +217,209 @@ questions:</p>
 </summary>
 <p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
 <p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 </div>
 <div id="section-task-3" class="section level2">
 <h2>Task 3:</h2>
 <p>Task Description Here</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
 <p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
-<p>Solution Here.</p>
+<p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 </div>
 <div id="section-task-4" class="section level2">
 <h2>Task 4:</h2>
 <p>Task Here.</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
 <p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
-<p>Solution Here</p>
+<p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 </div>
 <div id="section-task-5" class="section level2">
 <h2>Task 5:</h2>
 <p>Task Here</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
-<p>Hint Here.</p>
+<p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
-<p>Solution Here.</p>
+<p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 </div>
 <div id="section-task-6" class="section level2">
 <h2>Task 6:</h2>
 <p>Task Description.</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
-Hint here.
+<p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
 <p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 </div>
 <div id="section-task-7" class="section level2">
 <h2>Task 7:</h2>
 <p>Task here.</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
-<p>Hint here.</p>
+<p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
 <p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 </div>
 <div id="section-task-8" class="section level2">
 <h2>Task 8:</h2>
 <p>Task here.</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
-<p>Hint here.</p>
+<p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
 <p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 </div>
-<div id="section-task-9-power-analyses" class="section level2">
-<h2>Task 9: Power Analyses</h2>
+<div id="section-power-analyses" class="section level2">
+<h2>Power Analyses</h2>
 <p>Task here.</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
-<p>Hint here.</p>
+<p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
 <p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 </div>
 <div id="section-interpret-report" class="section level2">
 <h2>Interpret &amp; Report</h2>
 <p>Task here.</p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for a
-hint </span>
+<span style="font-weight: bold; font-size: 16pt"> Click here for a hint
+</span>
 </summary>
-<p>Hint here.</p>
+<p>Hint Here</p>
 </details>
+</div>
 <p></br></p>
+<div class="container">
 <details>
 <summary>
-<span style="font-weight: bold; font-size: 16pt"> + Click here for the
+<span style="font-weight: bold; font-size: 16pt"> Click here for the
 solution </span>
 </summary>
 <p>Solution here.</p>
 </details>
+</div>
 <p></br></p>
 <p>
 <script type="application/shiny-prerendered" data-context="server-start">
@@ -461,7 +497,7 @@ output$aucScorePlot <- renderPlot({
 
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", label = "q2-1", question = structure("What is the percentage of the sample who score between 95 and 110 on the WAIS? Please enter your answer as a whole number.", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_15c83e3", 
+"character")), answers = list(structure(list(id = "lnr_ans_c80e1e4", 
     option = "38", value = 38, label = structure("38", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -472,14 +508,14 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 "character")), message = structure("38% of the sample scored between 95 and 110.", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q2-1-answer", 
     question = "q2-1"), loading = NULL, random_answer_order = FALSE, 
-    allow_retry = FALSE, seed = 1137162519.97047, options = list(
+    allow_retry = FALSE, seed = 2062865361.0394, options = list(
         min = NA, max = NA, step = NA, tolerance = 1.5e-08)), class = c("learnr_numeric", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", label = "q2-2", question = structure("What percentage of the sample scored below 87? Please enter your answer as a whole number.", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_e46", 
+"character")), answers = list(structure(list(id = "lnr_ans_342198", 
     option = "19", value = 19, label = structure("19", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -490,7 +526,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 "character")), message = structure("19% of the sample received a score lower than 87.", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q2-2-answer", 
     question = "q2-2"), loading = NULL, random_answer_order = FALSE, 
-    allow_retry = FALSE, seed = 1612858257.74895, options = list(
+    allow_retry = FALSE, seed = 1192271008.44481, options = list(
         min = NA, max = NA, step = NA, tolerance = 1.5e-08)), class = c("learnr_numeric", 
 "tutorial_question")), session = session)
 </script>
@@ -498,7 +534,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", label = "q2-3", question = structure("You have a participant, J, who scored 138. Fill in the blank: “_% of the sample received a score at least as high as Participant J.” Please enter your answer as a whole number.", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_47bc259", 
+"character")), answers = list(structure(list(id = "lnr_ans_ba8639e", 
     option = "1", value = 1, label = structure("1", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -509,14 +545,14 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 "character")), message = structure("Only 1% of the sample scored at least 138.", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q2-3-answer", 
     question = "q2-3"), loading = NULL, random_answer_order = FALSE, 
-    allow_retry = FALSE, seed = 1327257445.38195, options = list(
+    allow_retry = FALSE, seed = 368544882.828383, options = list(
         min = NA, max = NA, step = NA, tolerance = 1.5e-08)), class = c("learnr_numeric", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", label = "q2-4", question = structure("If you wanted to isolate the 10% of your sample with the lowest scores, what cut-off score would you use?", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_8b0f6b2", 
+"character")), answers = list(structure(list(id = "lnr_ans_12a4df2", 
     option = "81", value = 81, label = structure("81", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -527,7 +563,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_numeric", labe
 "character")), message = structure("The lowest 10% of the sample scored below 81.", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q2-4-answer", 
     question = "q2-4"), loading = NULL, random_answer_order = FALSE, 
-    allow_retry = FALSE, seed = 627117004.207976, options = list(
+    allow_retry = FALSE, seed = 1757910966.68141, options = list(
         min = NA, max = NA, step = NA, tolerance = 1.5e-08)), class = c("learnr_numeric", 
 "tutorial_question")), session = session)
 </script>
