wk4 lecture to docs

--- a/Lectures/Week03_NHST_lecture.html
+++ b/Lectures/Week03_NHST_lecture.html
@@ -808,6 +808,27 @@ class: center, inverse, middle
 
 ---
 
+## `\(\alpha\)`
+
+.pull-left[
+.center[ ** `\(\alpha\)` = .05**
+
+![](Week03_NHST_lecture_files/figure-html/unnamed-chunk-47-1.svg)&lt;!-- --&gt;
+
+]
+]
+
+--
+
+.pull-right[
+.center[ ** `\(\alpha\)` = .01**
+
+![](Week03_NHST_lecture_files/figure-html/unnamed-chunk-48-1.svg)&lt;!-- --&gt;
+
+]
+]
+---
+
 ## Power
 
 + Similarly, we have to make a decision about how much we want to risk making a **Type II error** 
