--- a/Labs/Week04_ttests_Lab.html
+++ b/Labs/Week04_ttests_Lab.html
@@ -127,6 +127,8 @@ if (window.hljs) {
 <ul>
 <li>Identify IV(s) and DV(s)</li>
 <li>State Hypotheses (Independent Samples &amp; Paired Samples)</li>
+<li>Will do this for 2 research questions, one of which is a
+paired-samples, and one of which is an independent-samples</li>
 </ul>
 <div class="panel-heading tutorial-quiz-title">Test Your Understanding</div>
 <div class="panel panel-default tutorial-question-container">
@@ -400,19 +402,19 @@ output$distPlot <- renderPlot({
 
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "q1-1", question = structure("Which of the following hypotheses can be tested using a t-test?", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_cd4cab0", 
+"character")), answers = list(structure(list(id = "lnr_ans_57d25c1", 
     option = "Hypothesis1", value = "Hypothesis1", label = structure("Hypothesis1", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a7d0e62", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_bc3ed95", 
     option = "Hypothesis2", value = "Hypothesis2", label = structure("Hypothesis2", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_c3be8f", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_6645c3f", 
     option = "Hypothesis3", value = "Hypothesis3", label = structure("Hypothesis3", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_364b55", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_cef088c", 
     option = "Hypothesis4", value = "Hypothesis4", label = structure("Hypothesis4", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_fc8d415", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_8de097d", 
     option = "Hypothesis5", value = "Hypothesis5", label = structure("Hypothesis5", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -423,7 +425,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = structure("Feedback Here", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q1-1-answer", 
     question = "q1-1"), loading = NULL, random_answer_order = TRUE, 
-    allow_retry = FALSE, seed = 2061404113.04008, options = list()), class = c("learnr_radio", 
+    allow_retry = FALSE, seed = 25753603.4880075, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
 </p>
