--- a/Labs/Week04_ttests_Lab.html
+++ b/Labs/Week04_ttests_Lab.html
@@ -113,6 +113,38 @@ if (window.hljs) {
 <div id="section-intro-to-todays-lab" class="section level2">
 <h2>Intro to Today’s Lab</h2>
 <p>Intro Goes Here</p>
+</div>
+<div id="section-intro-to-todays-lab-1" class="section level2">
+<h2>Intro to Today’s Lab</h2>
+<p>During today’s lab, you’ll apply the concepts discussed during this
+week’s lecture. Each lab consists of a range of tasks, with
+corresponding questions you can answer. Please note that the questions
+are not required and not marked, although they do provide a helpful
+source of formative feedback that will help you gauge your
+understanding.</p>
+<p>In this week’s lab, you’ll be working with data simulated based on <a
+href="https://onlinelibrary.wiley.com/doi/10.1111/infa.12238">this
+paper</a>. In this study, researchers tested the effect of infant
+transport modality on their social interaction. Specifically, they
+compared the use of buggies and backpacks.</p>
+<p>You’ll be analysing data from two separate studies. In the first,
+researchers recruited 36 participants and split them into a backpack
+group and a buggy group. They then sent participants on a 15-minute walk
+with their infant and recorded the total number of parent vocalisations,
+infant vocalisations, and social interactions with strangers. They also
+recorded the number of times the parent touched their infant over the
+course of the walk.</p>
+<p>After running the first study, the researchers wanted to support
+their findings further. They ran a second experiment using a
+within-subjects design. In this experiment, they recruited 40
+participants and sent them out on 2 separate walks over the course of
+two weeks, once using a backpack and once a buggy. In this experiment,
+they recorded both infant and parent vocalisations from the same
+participants across each condition.</p>
+<p>You can download the data from the first experiment <a
+href="https://mtruelovehill.github.io/PRM/Labs/Week4LabData1.csv">here.</a>
+You can download the data from the second experiment <a
+href="https://mtruelovehill.github.io/PRM/Labs/Week4LabData2.csv">here.</a></p>
 <div id="section-learning-objectives" class="section level3">
 <h3>Learning Objectives</h3>
 <p>At the end of this lab, you will be able to:</p>
@@ -136,6 +168,14 @@ paired-samples, and one of which is an independent-samples</li>
 <div id="q1-1-answer_container" class="shiny-html-output"></div>
 <div id="q1-1-message_container" class="shiny-html-output"></div>
 <div id="q1-1-action_button_container" class="shiny-html-output"></div>
+<script>if (Tutorial.triggerMathJax) Tutorial.triggerMathJax()</script>
+</div>
+</div>
+<div class="panel panel-default tutorial-question-container">
+<div data-label="q1-2" class="tutorial-question panel-body">
+<div id="q1-2-answer_container" class="shiny-html-output"></div>
+<div id="q1-2-message_container" class="shiny-html-output"></div>
+<div id="q1-2-action_button_container" class="shiny-html-output"></div>
 <script>if (Tutorial.triggerMathJax) Tutorial.triggerMathJax()</script>
 </div>
 </div>
@@ -401,20 +441,20 @@ output$distPlot <- renderPlot({
 
 
 <script type="application/shiny-prerendered" data-context="server">
-learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "q1-1", question = structure("Which of the following hypotheses can be tested using a t-test?", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_57d25c1", 
+learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "q1-1", question = structure("Which of the following hypotheses can be tested using a t-test? Please select all that apply.", html = TRUE, class = c("html", 
+"character")), answers = list(structure(list(id = "lnr_ans_e0c62f6", 
     option = "Hypothesis1", value = "Hypothesis1", label = structure("Hypothesis1", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_bc3ed95", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_21dad0", 
     option = "Hypothesis2", value = "Hypothesis2", label = structure("Hypothesis2", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_6645c3f", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_eacc389", 
     option = "Hypothesis3", value = "Hypothesis3", label = structure("Hypothesis3", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_cef088c", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_5bd97ad", 
     option = "Hypothesis4", value = "Hypothesis4", label = structure("Hypothesis4", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_8de097d", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_c9ebdfd", 
     option = "Hypothesis5", value = "Hypothesis5", label = structure("Hypothesis5", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -425,7 +465,33 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = structure("Feedback Here", html = TRUE, class = c("html", 
 "character")), post_message = NULL), ids = list(answer = "q1-1-answer", 
     question = "q1-1"), loading = NULL, random_answer_order = TRUE, 
-    allow_retry = FALSE, seed = 25753603.4880075, options = list()), class = c("learnr_radio", 
+    allow_retry = FALSE, seed = 1073416683.00015, options = list()), class = c("learnr_radio", 
+"tutorial_question")), session = session)
+</script>
+ 
+<script type="application/shiny-prerendered" data-context="server">
+learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "q1-2", question = structure("You have developed an intervention and want to test its effectiveness. You recruit a sample of participants and measure their symptom severity both before and after the intervention. You measure patient symptom severity on a continuous scale. You would like to compare the two symptom severity scores. Which of the following tests is most appropriate?", html = TRUE, class = c("html", 
+"character")), answers = list(structure(list(id = "lnr_ans_cd26318", 
+    option = "One-sample t-test", value = "One-sample t-test", 
+    label = structure("One-sample t-test", html = TRUE, class = c("html", 
+    "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_691d2e", 
+    option = "Independent samples t-test", value = "Independent samples t-test", 
+    label = structure("Independent samples t-test", html = TRUE, class = c("html", 
+    "character")), correct = FALSE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_3a60206", 
+    option = "Paired-samples t-test", value = "Paired-samples t-test", 
+    label = structure("Paired-samples t-test", html = TRUE, class = c("html", 
+    "character")), correct = TRUE, message = NULL, type = "literal"), class = c("tutorial_question_answer", 
+"tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
+"character")), try_again = structure("<span data-i18n=\"button.questiontryagain\">Try Again<\u002fspan>", html = TRUE, class = c("html", 
+"character"))), messages = list(correct = structure("Correct!", html = TRUE, class = c("html", 
+"character")), try_again = structure("Incorrect", html = TRUE, class = c("html", 
+"character")), incorrect = structure("Incorrect", html = TRUE, class = c("html", 
+"character")), message = structure("Because you have a pre- and post-intervention measurement from each participant, the two scores are considered to be paired. An individual’s score on the post-test will not be independent of their scores on the pre-test. A paired-samples t-test will account for this lack of independence between the two groups of scores.", html = TRUE, class = c("html", 
+"character")), post_message = NULL), ids = list(answer = "q1-2-answer", 
+    question = "q1-2"), loading = NULL, random_answer_order = FALSE, 
+    allow_retry = FALSE, seed = 1395640189.8501, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
 </p>
